syntax = "proto3";

import public "meme.proto";


message CommentsResponse {
    message CommentItem {
        uint32 id = 1;
        string text = 2;
        uint32 vkId = 3;
        int32 likesCount = 4;
        uint32 createdAt = 5;
        optional Mark mark = 6;
    }

    message CommentsListResponse {
        uint32 count = 1;
        repeated CommentItem items = 2;
    }
}